fixed margin issues that caused element to overflow layout

--- a/src/components/ExtraInfo/ExtraInfo.module.css
+++ b/src/components/ExtraInfo/ExtraInfo.module.css
@@ -4,7 +4,7 @@
 
 .SectionTitle {
   border-bottom: 6px solid #827a75;
-  margin: 0px 15px 40px 15px;
+  /* margin: 0px 15px 40px 15px; */
   padding: 15px 0px 15px 0px;
   text-align: center;
   font-size: x-large;
