--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -9,7 +9,6 @@
   box-shadow: 0 5px 10px rgb(0, 0, 0);
   border-radius: 10px 10px 0px 0px;
   height: auto;
-  margin: 0px 15px 0px 15px;
   background-color: #ecd7cd;
   display: flex;
   justify-content: space-between;
@@ -45,7 +44,6 @@
   border-radius: 0px 0px 10px 10px;
   background: rgba(251, 243, 238, 0.95);
   box-shadow: 0 5px 10px #474747;
-  margin: 0px 15px 0px 15px;
   padding: 5px;
 }
 
@@ -77,7 +75,6 @@
   text-align: left;
   padding: 5px 15px 15px 25px;
 }
-
 
 @media (max-width: 1400px) {
   .Project {
